more changes to events

--- a/src/pages/createevent/createevent.html
+++ b/src/pages/createevent/createevent.html
@@ -2,6 +2,9 @@
 
   <ion-navbar color="primary">
     <ion-title>Create Event</ion-title>
+    <ion-buttons start>
+        <button ion-button (click)="goBack()">Cancel</button>
+      </ion-buttons>
     <ion-buttons end>
       <button ion-button (click)="createNewEvent()">Create</button>
     </ion-buttons>
