--- a/src/pages/edit/edit.html
+++ b/src/pages/edit/edit.html
@@ -53,7 +53,7 @@
     state:state.value,
     class: class.value,
     fatherName:fatherName.value,
-    motherFirstName:motherName.value,
+    motherName:motherName.value,
     emergencyContactName:emergencyContactName.value,
     emergencyRelationship:emergencyRelationship.value,
     emergencyContactPhoneNumber:emergencyContactPhoneNumber.value
