--- a/src/pages/student-list/student-list.html
+++ b/src/pages/student-list/student-list.html
@@ -15,29 +15,30 @@
   <ion-searchbar (ionInput)="searchStudent($event)">
   </ion-searchbar>
   <ion-item>
-    <ion-label>Sort by: </ion-label>
-    <ion-select [(ngModel)]="query" multiple="false" selectSettings="selectOptions">
-      <ion-option *ngFor="let option of selectOptions" (ionSelect)="queryData(option)">{{option}}</ion-option>
-    </ion-select>
-  </ion-item>
-  <ion-list>
+      <ion-label>Sort by:</ion-label>
+      <ion-select interface="popover" multiple="false" selectSettings="selectOptions" placeholder="None">
+        <ion-option *ngFor="let option of selectOptions" (ionSelect)="sortData(option)">{{option}}</ion-option>
+      </ion-select>
+    </ion-item>
+    <ion-item>
+      <ion-label>Filter by class: </ion-label>
+      <ion-select interface="popover" multiple="false" selectSettings="filterOptions" placeholder="None">
+        <ion-option *ngFor="let class of filterOptions" (ionSelect)="filterByClass(class)">{{class}}</ion-option>
+      </ion-select>
+    </ion-item>  <ion-list>
     <ion-item (click)="goToStudentProfile(student.id)" *ngFor="let student of students">
       <ion-avatar item-left>
         <img src="{{student.picture}}" alt="no image">
       </ion-avatar>
       <div class="amaranthus">
         <p>
-          <span class="label name">Name: </span><span class="name">{{student.firstName}}
-          <span *ngIf="student.initial">{{student.initial}}</span> {{student.lastName}}</span>
+          <span class="label name">Name: </span>
+          <span class="name">{{student.firstName}}
+            <span *ngIf="student.initial">{{student.initial}}</span> {{student.lastName}}</span>
         </p>
         <p>
           <span class="label">ID:</span>{{student.id}}
         </p>
-        <div *ngIf="student.phoneNumber">
-          <p>
-            <span class="label">Phone Number: </span>{{student.phoneNumber}}
-          </p>
-        </div>
         <p>
           <span class="label">Address: </span>{{student.address}}
         </p>
@@ -47,8 +48,14 @@
         <p>
           <label class="label">State: </label>{{student.state}}
         </p>
+        <p *ngIf="student.class">
+          <span class="label">Class: </span>{{student.class}}
+        </p>
+        <p *ngIf="student.phoneNumber">
+          <span class="label">Phone Number: </span>{{student.phoneNumber}}
+        </p>
         <p class="attended">
-         Tap to see {{student.firstName}}'s profile!
+          Tap to see {{student.firstName}}'s profile!
         </p>
       </div>
     </ion-item>
