--- a/src/pages/edit/edit.html
+++ b/src/pages/edit/edit.html
@@ -28,7 +28,7 @@
         emergencyRelationship:emergencyRelationship.value,
         emergencyContactPhoneNumber:emergencyContactPhoneNumber.value
         })">
-        Save Changes
+        Save
       </button>
     </ion-buttons>
   </ion-navbar>
@@ -156,7 +156,7 @@
         <ion-checkbox name="isActive" [(ngModel)]='isActive'></ion-checkbox>
       </ion-item>
     </ion-item-group>
-    <button type="submit" ion-button color="primary">Save Changes</button>
+    <button type="submit" ion-button color="primary">Save</button>
     <button type="button" ion-button color="danger" (click)="deleteStudent({id:id.value})">Delete</button>
   </form>
 </ion-content>
