on the road to notes feature

--- a/src/pages/student-profile/student-profile.html
+++ b/src/pages/student-profile/student-profile.html
@@ -57,6 +57,9 @@
     <p class="text bold">
       <span class="text label">Phone Number: </span>{{student.emergencyContactPhoneNumber}}
     </p>
+    <p class="text bold">
+      <span class="text label">Notes: </span>{{student.notes}}
+    </p>
     <div class="text bold">
       <p *ngIf="student.isActive == true">
         *Student is currently active on the roster.*
