--- a/src/pages/main/main.html
+++ b/src/pages/main/main.html
@@ -62,7 +62,7 @@
             <ion-icon name="paper"></ion-icon>
           </button>
           <div *ngIf="toggle == student.id">
-            <textarea #notes (keyup)="addNotes(notes.value)"></textarea>
+            <textarea #notes (keyup)="addNotes({id: student.id, notes:notes.value})">{{student.notes}}</textarea>
           </div>
           <div>
             <p class="left attended" *ngIf="student.attendance">
