--- a/src/pages/calendar/calendar.html
+++ b/src/pages/calendar/calendar.html
@@ -16,7 +16,7 @@
 <ion-content padding>
   <calendar-component (getDate)="getDate($event)"></calendar-component>
   <h4>{{currentDate}}</h4>
-  <ion-searchbar (ionInput)="searchStudent($event)">
+  <ion-searchbar [(ngModel)]="search" (ionInput)="searchStudent()">
   </ion-searchbar>
   <ion-list *ngIf="students">
     <ion-item-sliding *ngFor="let student of students">
