--- a/src/pages/editevent/editevent.html
+++ b/src/pages/editevent/editevent.html
@@ -34,7 +34,7 @@
   </ion-item-group>
   <ion-item>
     <ion-label>Start Date</ion-label>
-    <ion-datetime displayFormat="MMMM DD YYYY" pickerFormat="MMMM DD YYYY" [(ngModel)]="startDate"></ion-datetime>
+    <ion-datetime displayFormat="MMMM DD YYYY" min="2018-01-01" max="2999-12-31" pickerFormat="MMMM DD YYYY" [(ngModel)]="startDate"></ion-datetime>
   </ion-item>
   <ion-item>
     <ion-label>Has End Date?</ion-label>
@@ -42,7 +42,7 @@
   </ion-item>
   <ion-item *ngIf="hasEndDate" (ionChange)="resetEndDate()">
     <ion-label>End Date</ion-label>
-    <ion-datetime displayFormat="MMMM DD YYYY" pickerFormat="MMMM DD YYYY" [(ngModel)]="endDate"></ion-datetime>
+    <ion-datetime displayFormat="MMMM DD YYYY" min="2018-01-01" max="2999-12-31" pickerFormat="MMMM DD YYYY" [(ngModel)]="endDate"></ion-datetime>
     <ion-icon id="form-icon" item-right name="warning" *ngIf="!this.endDate && hasEndDate"></ion-icon>
   </ion-item>
   <ion-list no-lines>
