--- a/src/pages/createevent/createevent.html
+++ b/src/pages/createevent/createevent.html
@@ -15,7 +15,7 @@
   <div *ngIf="logo" class="logo-image">
     <img src="{{logo}}" alt="A picture for the logo for the event">
   </div>
-  <button (click)="addLogo()" type="button" ion-button color="primary">Browse</button>
+  <button (click)="addLogo()" type="button" ion-button color="primary">Add a Logo</button>
   <button (click)="logo = '' " type="button" ion-button color="secondary">Reset</button>
   <ion-item-group>
     <ion-item>
