--- a/src/pages/edit/edit.html
+++ b/src/pages/edit/edit.html
@@ -76,7 +76,7 @@
         <ion-icon id="form-icon" item-right name="warning" *ngIf="!firstName.value"></ion-icon>
       </ion-item>
       <ion-item>
-        <ion-label stacked>Initial</ion-label>
+        <ion-label stacked>Middle Name</ion-label>
         <ion-input [value]="student.initial" type="text" #initial></ion-input>
       </ion-item>
       <ion-item>
