--- a/src/pages/edit/edit.html
+++ b/src/pages/edit/edit.html
@@ -63,7 +63,7 @@
         <ion-label stacked>Picture</ion-label>
         <ion-input type="text" readonly="true" name="picture" [(ngModel)]="picture"></ion-input>
       </ion-item> -->
-      <button (click)="browsePicture()" type="button" ion-button color="primary">Browse</button>
+      <button (click)="browsePicture()" type="button" ion-button color="primary">Change</button>
       <button (click)="picture = ''" type="button" ion-button color="secondary">Reset</button>
       <ion-item>
         <ion-label stacked>ID</ion-label>
