--- a/src/pages/events-pages/events/events.html
+++ b/src/pages/events-pages/events/events.html
@@ -27,10 +27,12 @@
         <h3><span>Start Date:</span> {{event.startDate}}</h3>
         <h3 *ngIf="event.endDate"><span>End Date:</span> {{event.endDate}}</h3>
         <!-- <br> -->
-        <p><span>Totals Members:</span> {{event.totalMembers}}</p>
         <p><span>Total Attendance:</span> {{event.totalAttendance}}</p>
         <p><span>Total Absence:</span> {{event.totalAbsence}}</p>
       </div>
+      <ng-template #infiniteDatesIsTrue>
+        <p><span>Totals Members:</span> {{event.totalMembers}}</p>
+      </ng-template>
     </ion-card-content>
   </ion-card>
 </ion-content>
