--- a/src/pages/events-pages/createevent/createevent.html
+++ b/src/pages/events-pages/createevent/createevent.html
@@ -6,6 +6,7 @@
       <button ion-button (click)="goBack()">Cancel</button>
     </ion-buttons>
     <ion-buttons end>
+        <button ion-button (click)="addAll()">Add All</button>
       <button ion-button (click)="createNewEvent()">Create</button>
     </ion-buttons>
   </ion-navbar>
